# PFASpectrumRetreat

./: 2025 - PFA Spectrum Retreat (Difficulté ).docx  CMakeLists.txt  README.md
Assets/: CMakeLists.txt
Assets/Levels/: Level.txt  Lights.txt
Assets/Shaders/: FragmentShader.frag  RayVertex.vert  SkyBoxFrag.frag  SkyBoxVert.vert  VertexShader.vert
Game/: CMakeLists.txt
Game/include/: Application.h  GameManager.h  LightManager.h  Player.h  UiManager.h
Game/src/: Application.cpp  GameManager.cpp  LightManager.cpp  Player.cpp  UiManager.cpp  main.cpp
LibGL/: CMakeLists.txt
LibGL/DataStructure/: CMakeLists.txt
LibGL/DataStructure/Header/: SceneGraph.h
LibGL/DataStructure/Source/: SceneGraph.cpp
LibGL/Dependencies/: CMakeLists.txt
LibGL/LowRenderer/: CMakeLists.txt
LibGL/LowRenderer/Header/: Camera.h  Light.h  Material.h  Mesh.h  SkyBox.h
LibGL/LowRenderer/Source/: Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  SkyBox.cpp
LibGL/Physics/: CMakeLists.txt
LibGL/Physics/Header/: Collider.h  CollisionDispatcher.h  GameObject.h
LibGL/Physics/Source/: Collider.cpp  GameObject.cpp
LibGL/Resources/: CMakeLists.txt
LibGL/Resources/Header/: IRessource.h  Model.h  RessourceManager.h  Shader.h  Texture.h
LibGL/Resources/Source/: Model.cpp  RessourceManager.cpp  Shader.cpp  Texture.cpp
LibMath/: CMakeLists.txt
LibMath/Header/LibMath/: Angle.h  Arithmetic.h  Collisions.h  GeometricObject2.h  GeometricObject3.h  Intersection.h  LibMath.h  Matrix.h  Matrix4Vector4Operation.h  Quaternion.h  Trigonometry.h  Vector.h
LibMath/Header/LibMath/Angle/: Degree.h  Radian.h
LibMath/Header/LibMath/Matrix/: Matrix2.h  Matrix3.h  Matrix4.h
LibMath/Header/LibMath/Vector/: Vector2.h  Vector3.h  Vector4.h
LibMath/Source/: Angle.cpp  Arithmetic.cpp  Collisions.cpp  GeometricObject2.cpp  GeometricObject3.cpp  Matrix.cpp  Trigonometry.cpp  Vector.cpp
